version/0.12/_sources/api/solver/_autosummary/settings/graphics.rst.txt
:orphan:

.. _graphics:

graphics
========

.. currentmodule:: ansys.fluent.core.solver.settings_231.graphics

.. autoclass:: graphics
    :show-inheritance:
    :undoc-members:
.. rubric:: Children

========================================   =================================================

Child                                                                                Summary

========================================   =================================================
:ref:`contour <contour>`                                                    'contour' child.

:ref:`mesh <mesh_2>`                                                           'mesh' child.

:ref:`vector <vector>`                                                       'vector' child.

:ref:`pathline <pathline>`                                                 'pathline' child.

:ref:`particle_track <particle_track>`                               'particle_track' child.

:ref:`lic <lic>`                                                                'lic' child.

:ref:`olic <olic>`                                                             'olic' child.

:ref:`contours <contours>`                                                 'contours' child.

:ref:`particle_tracks <particle_tracks>`                            'particle_tracks' child.

:ref:`colors <colors>`                                                       'colors' child.

:ref:`lights <lights>`                                                       'lights' child.

:ref:`picture <picture>`                       Enter the hardcopy/save-picture options menu.

:ref:`views <views>`                                                          'views' child.

:ref:`windows <windows>`                                                    'windows' child.

========================================   =================================================

.. rubric:: Included in:

========================   ====================

Parent                                  Summary

========================   ====================
:ref:`results <results>`       'results' child.

========================   ====================

